[tool.poetry]
name = "selenium-webdriver-example"
version = "1.0"
description = "Selenium WebDriver example"
authors = ["Svetlin Nakov"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
